Showcase: Ensure adequate spacing between main content and footer.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9571 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
@@ -376,6 +376,7 @@ blockquote cite {
 
 #pagebody {
 	font-size: 13px;
+	overflow: auto;
 }
 
 #pagebody.home {
@@ -775,7 +776,7 @@ a.wpsc-hero-learnmore {
 	display: block;
 	text-align: right;
 	font-weight: bold;
-	margin: 20px 25px 100px 25px;
+	margin: 20px 25px 50px 25px;
 
 }
 
@@ -805,6 +806,10 @@ a.wpsc-hero-learnmore {
 
 .currentSiteRating {
 	display: none;
+}
+
+#wporg-footer {
+	margin-top: 50px;
 }
 
 /* Large devices */
